Frontend de proyecto laravel api

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,47 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-root></app-root>
+  <div class="h-100">
+    <div class="d-flex flex-column h-100">
+      <div id="header" style="background-color: #1565c0;">
+        <a href="/" style="text-decoration: none;"><h3 style="color: white;">Inicio</h3></a>
+      </div>
+
+      <div id="content" class="container">
+        <app-root></app-root>
+      </div>
+
+      <div id="footer" class="bg-secondary p-5 mt-auto">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-4">
+              <strong>Conocenos</strong>
+              <ul class="ul-footer">
+                <li><a href="http://" target="_blank"> Historia</a></li>
+                <li><a href="http://" target="_blank"> Nosotros</a></li>
+                <li><a href="http://" target="_blank"> Proyectos</a></li>
+              </ul>
+            </div>
+            <div class="col-md-4">
+              <strong>Aviso de Privacidad</strong>
+              <ul class="ul-footer">
+                <li><a href="http://" target="_blank"> Lorem</a></li>
+                <li><a href="http://" target="_blank"> Ipsum</a></li>
+                <li><a href="http://" target="_blank"> Dare</a></li>
+              </ul>
+            </div>
+            <div class="col-md-4">
+              <strong>Redes Sociales</strong>
+              <ul class="ul-footer">
+                <li>Facebook</li>
+                <li>Twitter</li>
+                <li>Instagram</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
